pipelines/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsu-ingress
spec:
  rules:
  - http:
      paths:
      - path: /springboot
        pathType: Prefix
        backend:
          service:
            name: sb-app-svc
            port:
              number: 8080
      - path: /python
        pathType: Prefix
        backend:
          service:
            name: python-app-svc
            port:
              number: 8081
      - path: /nodejs
        pathType: Prefix
        backend:
          service:
            name: nodejs-app-svc
            port:
              number: 8082
